[gd_scene format=3 uid="uid://dyv8ln5hfr6ly"]

[ext_resource type="Script" uid="uid://dytymm8pnwiej" path="res://scripts/ui/game_ui.gd" id="1_yubou"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ojb23"]

[node name="GameUI" type="CanvasLayer" unique_id=265883163]
script = ExtResource("1_yubou")

[node name="HUD" type="Control" parent="." unique_id=60727962]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnLabel" type="Label" parent="HUD" unique_id=636824278]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 74.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "Turn: 1"

[node name="PhaseLabel" type="Label" parent="HUD" unique_id=966618992]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 121.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.27445835, 0.5656945, 0.42277968, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Player's Turn"

[node name="EndTurnButton" type="Button" parent="HUD" unique_id=333523954]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 170.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 16
text = "End Turn (Enter)"

[node name="UnitInfoPanel" type="Panel" parent="HUD" unique_id=1967345128]
layout_mode = 0
offset_left = 820.0
offset_top = 20.0
offset_right = 1020.0
offset_bottom = 220.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ojb23")

[node name="UnitNameLabel" type="Label" parent="HUD/UnitInfoPanel" unique_id=1236302271]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 16
text = "No Unit Selected"

[node name="UnitTypeLabel" type="Label" parent="HUD/UnitInfoPanel" unique_id=173545466]
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 50.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 12

[node name="UnitStatsLabel" type="Label" parent="HUD/UnitInfoPanel" unique_id=1790425662]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 50.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 12
autowrap_mode = 2

[node name="UnitStatusLabel" type="Label" parent="HUD/UnitInfoPanel" unique_id=1639014319]
layout_mode = 0
offset_left = 10.0
offset_top = 130.0
offset_right = 50.0
offset_bottom = 153.0
theme_override_colors/font_color = Color(0.7318067, 0.6076543, 0, 1)
theme_override_font_sizes/font_size = 11
